# commonroad-multi-agent-rl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.runtime  README.md  pyproject.toml
ci/image/: Dockerfile  build_and_push_docker.sh  readme.md
evaluation/: analyze_scenarios.py  compute_bootstraped_ci.py  termination_rates_single_run.py
scripts/: dep_overrides.py  episode_metrics.py  multiagent_env.py  obs_stats.py  parallel_env.py  train.py  xml_to_video_renderer.py
scripts/config/: sonia_obstacle_config.json
scripts/deps_overrides/: collector_override.py  commonroad_env_overrides.py  pettingzoo_overrides.py  policy_overrides.py  safe_rl_lib_overwrites.py  setup_pipelines_base_override.py
xmlScenario/: ZAM_Tutorial-1_2_T-1.xml
xmlScenario/pkl/: ZAM_Tutorial-1_2_T-1.xml.pkl
