[tool.poetry]
name = "safe-rl-autodrive"
version = "0.1.0"
description = "Provably safe reinforcement learning applied to autonomous driving."
authors = ["Ansgar Kasselmann <mail@ansgar-kasselmann.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11 <3.12"
setuptools = "^72.1.0"
numpy = "^1.26"
ruff = "^0.5.1"
tianshou = "^1.1.0"
pydantic = "^2.8.0"
pyyaml = "^6.0.1"
pydantic-yaml = "^1.3.0"
gymnasium = "^0.28"
continuoussets = { git = "https://github.com/wetzlingerm/continuoussets.git", branch = "dev" }
safe-rl-lib = { git = "git@gitlab.lrz.de:cps/cps-rl/safe-rl-lib.git", branch = "develop/ansgar" }
pydantic-numpy = "5.0.2"
# optuna = "^3.6.1"
# joblib = "^1.4.2"
# pycddlib = "<3.0.0"
tensorboard = "^2.18.0"
moviepy = "^2.1.1"
wandb = "^0.19.2"
pandas = "^2.2.3"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "8.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
format.quote-style = "single"
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
